1) Some minor content changes 2) firefox font size change to fix clipping

--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -25,3 +25,11 @@ li {
 nav a {
     font-family: $heading-font;
 }
+
+.email {
+    color: $brand-color;
+    text-decoration: underline;
+}
+.email:hover {
+    color: $accent-color;
+}
